@@ -47,7 +47,7 @@ public final class RoleAccessAssertion implements AccessAssertion {
         Set roles = (Set) assertionRequiredRoles;
         this.requiredRoles = Collections.unmodifiableSet(roles);
       } else {
-        this.requiredRoles = Collections.unmodifiableSet(new HashSet<>(assertionRequiredRoles));
+        this.requiredRoles = Set.copyOf(assertionRequiredRoles);
       }
     }
     return this;
@@ -135,7 +135,7 @@ public final class RoleAccessAssertion implements AccessAssertion {
   @Override
   public AccessAssertion copy() {
     RoleAccessAssertion assertion = new RoleAccessAssertion();
-    assertion.requiredRoles = Collections.unmodifiableSet(new HashSet<>(this.requiredRoles));
+    assertion.requiredRoles = Set.copyOf(this.requiredRoles);
     return assertion;
   }
 }
